# py2048-gui

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg
docs/: design.md  fp_principles.md
examples/: run_local.md
src/: board.py  game.py  main.py  moves.py  score.py  state.py  utils.py  webapp.py
src/gui/: app.py  controller.py  styles.py
src/gui/views/: board_view.py  tile_view.py
src/static/: index.html
src/tests/: test_board.py  test_game_flow.py  test_moves.py
