[tool.poetry]
name = "py2048-gui"
version = "0.1.0"
description = "A graphical user interface implementation of the 2048 game."
authors = ["Your Name <your.email@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
tkinter = "*"
numpy = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"