[metadata]
name = py2048-gui
version = 0.1.0
description = A graphical user interface implementation of the 2048 game.
author = Abishek R
author_email = abi23456shek@gmail.com
url = https://github.com/yourusername/py2048-gui
license = MIT

[options]
packages = find:
install_requires =
    pygame
    numpy

[options.packages.find]
where = src

[tool:pytest]
testpaths = src/tests
python_files = test_*.py

[coverage:run]
branch = True
source = src

[coverage:report]
show_missing = True
skip_covered = True